--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name2">My Application</string>
+
+    <string name="facebook_app_id" translatable="false">752568681483147</string>
+    <string name="facebook_app_namespace" translatable="false">hotelnow_app</string>
 </resources>
