--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,6 +199,7 @@
     <string name="login_facebook">페이스북</string>
     <string name="login_not_user"><u>비회원 예약하기 ></u></string>
     <string name="login_user_search"><u>비회원 조회하기 ></u></string>
+    <string name="login_user_search2"><u>비회원 예약조회</u></string>
     <string name="login_find_pass"><u>비밀번호 찾기</u></string>
     <string name="phone_change"><u>변경하기</u></string>
     <string name="phone_cancel"><u>취소하기</u></string>
@@ -213,6 +214,7 @@
     <string name="sell_complete">판매 완료</string>
     <string name="all_cancel"><u>전체취소</u></string>
     <string name="stay_go"><u>숙소 보러가기 ></u></string>
+    <string name="activity_go"><u>액티비티 보러가기 ></u></string>
 
     <string name="year_month_day_weekday_format3">MM월 dd일 (E)</string>
 
@@ -250,6 +252,9 @@
     <string name="validator_user_birth">생년월일을 선택하세요.</string>
     <string name="validator_user_gender">성별을 선택하세요.</string>
     <string name="validator_recommend_fail">적립금 지급에 실패하였습니다. 고객센터로 문의바랍니다.</string>
+    <string name="info_reservation">최근 12개월간의 예약/취소 내역입니다</string>
+    <string name="info_review">리뷰 작성하고 500원 받기</string>
+    <string name="info_review2">(체크아웃 이후 단, 10일간 작성 가능)</string>
     <!-- Member Join Validator -->
 
     <!-- ActLogin -->
