--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,10 +53,13 @@
     <string name="alert_notice_update">업데이트 알림</string>
     <string name="alert_close">닫기</string>
     <string name="alert_notice">알림</string>
+    <string name="alert_account_msg">인터넷뱅킹을 이용해 입금자명[%1$s]으로 입력해 주시면, (%2$s)님 이름으로 실시간 예약이 완료됩니다.\n\n입금기한: %3$s 까지</string>
     <string name="alert_yes">예</string>
     <string name="alert_no">아니오</string>
     <string name="wanna_logout">로그아웃 하시겠습니까?</string>
     <string name="need_caution_agree">주의사항 및 개인정보 제3자 제공 동의는 필수항목입니다.</string>
+    <string name="booking_hide_ask">예약내역을 삭제하시면 복구할 수 없습니다.\n그래도 삭제하시겠습니까?</string>
+    <string name="booking_receipt_ask">영수증 확인 페이지로 연결하시겠습니까?</string>
     <!-- end ActLogin -->
 
     <!-- ActMap -->
@@ -101,6 +104,7 @@
     <string name="special_title">/ 호텔나우만의 특별한 혜택 /</string>
     <string name="btn_private">가격 제안</string>
     <string name="btn_reservation">예약하기</string>
+    <string name="btn_reservation_detail">예약 </string>
     <string name="btn_more">상세 정보 닫기</string>
     <string name="btn_more2">상세 정보 보기</string>
     <string name="btn_close">닫기</string>
@@ -119,9 +123,11 @@
     <string name="calendar_complate">선택 완료</string>
     <string name="reservation_title">예약하기</string>
     <string name="reservation_user_info_title">예약자 정보</string>
-    <string name="reservation_user_discount_title">할인정보</string>
-    <string name="reservation_user_price_title">가격정보</string>
+    <string name="reservation_user_info_title2">예약 정보</string>
+    <string name="reservation_user_discount_title">할인 정보</string>
+    <string name="reservation_user_price_title">가격 정보</string>
     <string name="reservation_pay_title">결제방식</string>
+    <string name="reservation_payinfo_title">결제 장보</string>
     <string name="reservation_private">프라이빗딜 특별할인</string>
     <string name="reservation_point">적립금</string>
     <string name="reservation_coupon">쿠폰사용</string>
@@ -130,6 +136,7 @@
     <string name="reservation_price">정상가</string>
     <string name="reservation_discount_price">할인금액</string>
     <string name="reservation_sale_price">총 결제금액</string>
+    <string name="reservation_money">구매 보상</string>
     <string name="reservation_sale_price_info">* 세금 및 봉사료가 모두 포함된 금액입니다</string>
     <string name="name">이름</string>
     <string name="contects">연락처</string>
@@ -181,6 +188,7 @@
     <string name="save_title">적립금 내역</string>
     <string name="save_subtitle">적립금 적립 / 사용 내역</string>
     <string name="coupon_title">쿠폰함</string>
+    <string name="info_title">확인사항</string>
     <string name="coupon_savecoupon">보유중인 쿠폰</string>
     <string name="card_save">등록된 결제카드</string>
     <string name="coupon_subtitle">쿠폰등록</string>
@@ -264,8 +272,11 @@
     <string name="info_review">리뷰 작성하고 500원 받기</string>
     <string name="info_review2">(체크아웃 이후 단, 10일간 작성 가능)</string>
     <!-- Member Join Validator -->
+    <string name="save_point_info">* 정상 구매건에 한하여  체크아웃 이후 자동 지급</string>
+
 
     <!-- ActLogin -->
     <string name="login_loading">로그인 중&#8230;</string>
     <string name="login_complete">로그인 되었습니다.</string>
+    <string name="until_string">%1$s 까지</string>
 </resources>
