--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,8 @@
     <string name="alert_close">닫기</string>
     <string name="alert_notice">알림</string>
     <string name="alert_account_msg">인터넷뱅킹을 이용해 입금자명[%1$s]으로 입력해 주시면, (%2$s)님 이름으로 실시간 예약이 완료됩니다.\n\n입금기한: %3$s 까지</string>
+    <string name="review_save_title">리뷰 작성은 숙박 후 10일간만 가능하며,\n정상 등록시 적립금 500원이 바로 지급됩니다.</string>
+
     <string name="alert_yes">예</string>
     <string name="alert_no">아니오</string>
     <string name="wanna_logout">로그아웃 하시겠습니까?</string>
@@ -68,6 +70,11 @@
 
     <!-- ActLogin -->
     <string name="not_support_device">지도보기를 지원하지 않는 기기입니다.</string>
+    <string name="booking_review_hint">여러분이 남겨주신 객관적이고 솔직한 평가는 다른 고객들의 선택에 큰 도움이 될 수 있습니다.\n\n여러분의 경험을 공유해주세요.\n(5자 이상)</string>
+    <string name="review_ynj_hn_msg">허위 사실이나 비속어, 욕설이 포함된 글은 운영자에 의해 강제 삭제 될 수 있습니다.\n작성된 리뷰는 호텔나우 제휴(야놀자, 야놀자펜션, 가자고) 채널에서 노출 될 수 있습니다. 고객님의 이름은 직접 노출되지 않으며, 평가 점수와 내용이 보여집니다.</string>
+    <string name="need_review_msg">내용을 입력해 주세요.</string>
+    <string name="need_review_msg2">텍스트 리뷰를 5자 이상 작성해주세요.</string>
+    <string name="need_review_msg3">별점을 선택하여 주십시요.</string>
 
     <string name="companyinfo_txt1">봉봉랩(주)  |  대표자 김가영  |  대표번호 : 1670-6864\n\n주소: 서울시 강남구 테헤란로 108길 42 (대치동, 엠디엠타워)\n사업자 번호 : 215-87-4279454\n\n통신판매업신고 : 제2017-서울강남-00156호\n\n제휴문의 : cs@hotelnow.co.kr</string>
     <string name="term_title">이용약관</string>
@@ -275,8 +282,22 @@
     <string name="save_point_info">* 정상 구매건에 한하여  체크아웃 이후 자동 지급</string>
 
 
+    <!-- 추천 유도팝업 메시지 -->
+    <string name="recommendation_popup">친구를 호텔나우로 초대해주세요!\n초대받은 친구와 각각 %1$s원씩 적립해드립니다.</string>
+    <string name="recommendation_popup_after_review">친구에게 호텔나우를 소개하시면 각각 %1$s원씩 적립해 드립니다. 지금 초대해주세요!</string>
+    <string name="recommendation_popup_after_booking">친구를 호텔나우로 초대해주세요!\n초대받은 친구와 각각 %1$s원씩 적립해드립니다.</string>
+
     <!-- ActLogin -->
     <string name="login_loading">로그인 중&#8230;</string>
     <string name="login_complete">로그인 되었습니다.</string>
     <string name="until_string">%1$s 까지</string>
+
+    <!-- FrgRecommend -->
+    <string name="recom_title">친구에게 호텔나우를 소개해주세요!\n친구와 각각 %1$s원씩 적립해드립니다.</string>
+    <string name="recom_kakao">카카오톡으로 친구초대</string>
+    <string name="recom_facebook">페이스북으로 친구초대</string>
+    <string name="recom_desc">※ 초대한 친구는 초대받은 친구가 첫 구매 후,\n숙박 리뷰 작성 시 %1$s원을 적립해드립니다.</string>
+    <string name="recom_desc2">※ 초대한 친구는 초대받은 친구가 첫 구매 후,\n숙박 리뷰 작성 시 %1$s원을 적립해드립니다.</string>
+    <string name="congraturations">짝짝짝! %1$s원이 적립되었습니다.</string>
+    <string name="get_reserve_money">예약시 적립금으로 할인받아보세요!</string>
 </resources>
