--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="alert_notice">알림</string>
     <string name="alert_account_msg">인터넷뱅킹을 이용해 입금자명[%1$s]으로 입력해 주시면, (%2$s)님 이름으로 실시간 예약이 완료됩니다.\n\n입금기한: %3$s 까지</string>
     <string name="review_save_title">리뷰 작성은 숙박 후 10일간만 가능하며,\n정상 등록시 적립금 500원이 바로 지급됩니다.</string>
+    <string name="review_save_title2">리뷰 작성은 구매 티켓 사용 일 이후 10일간 가능합니다.</string>
 
     <string name="alert_yes">예</string>
     <string name="alert_no">아니오</string>
