--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -301,4 +301,5 @@
     <string name="recom_desc2">※ 초대한 친구는 초대받은 친구가 첫 구매 후,\n숙박 리뷰 작성 시 %1$s원을 적립해드립니다.</string>
     <string name="congraturations">짝짝짝! %1$s원이 적립되었습니다.</string>
     <string name="get_reserve_money">예약시 적립금으로 할인받아보세요!</string>
+    <string name="not_user_reservation">본 예약은 비회원 예약으로 이후 예약 확인을 위해 예약번호, 예약자명, 전화번호를 꼭 숙지 해주시기 바랍니다</string>
 </resources>
