--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -306,4 +306,8 @@
     <string name="congraturations">짝짝짝! %1$s원이 적립되었습니다.</string>
     <string name="get_reserve_money">예약시 적립금으로 할인받아보세요!</string>
     <string name="not_user_reservation">본 예약은 비회원 예약으로 이후 예약 확인을 위해 예약번호, 예약자명, 전화번호를 꼭 숙지 해주시기 바랍니다</string>
+
+    <string name="setting_message">- 단독 특가 알림, 깜짝 이벤트 등 호텔나우의 실속있는 혜택을 누구보다 빠르게 받아볼 수 있습니다.</string>
+    <string name="setting_message2">- 동의해주신 채널에 따라 메시지가 발송됩니다. 원하지 않는 경우 각 채널별 수신동의를 해제해주시기 바랍니다.</string>
+
 </resources>
