--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,5 +309,6 @@
 
     <string name="setting_message">- 단독 특가 알림, 깜짝 이벤트 등 호텔나우의 실속있는 혜택을 누구보다 빠르게 받아볼 수 있습니다.</string>
     <string name="setting_message2">- 동의해주신 채널에 따라 메시지가 발송됩니다. 원하지 않는 경우 각 채널별 수신동의를 해제해주시기 바랍니다.</string>
+    <string name="back_button">\'뒤로\' 버튼을 한번 더 누르시면 앱이 종료됩니다.</string>
 
 </resources>
