--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="need_review_msg2">텍스트 리뷰를 5자 이상 작성해주세요.</string>
     <string name="need_review_msg3">별점을 선택하여 주십시요.</string>
 
-    <string name="companyinfo_txt1">\n(주)야놀자   |   대표자 이수진\n\n서울특별시 강남구 테헤란로 108길 42(대치동, 엠디엠타워)\n 사업자 번호 : 220-87-42885, 통신 판매업 신고 : 강남-14211호 관광사업자 등록번호 : 제2016-31호\n대표전화 : 1670-6864, 이메일 : help@yanolja.com</string>
+    <string name="companyinfo_txt1">\n(주)야놀자   |   대표자 이수진\n\n서울특별시 강남구 테헤란로 108길 42(대치동, 엠디엠타워)\n사업자 번호 : 220-87-42885, 통신 판매업 신고 : 강남-14211호\n관광사업자 등록번호 : 제2016-31호\n대표전화 : 1670-6864, 이메일 : help@yanolja.com</string>
     <string name="term_title">이용약관</string>
     <string name="term_txt1">서비스 이용약관</string>
     <string name="term_txt2">개인정보처리방침</string>
