--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     <string name="term_title">이용약관</string>
     <string name="term_txt1">서비스 이용약관</string>
     <string name="term_txt2">개인정보처리방침</string>
-    <string name="term_txt3">위치기반 서비스 이용약관</string>
+    <string name="term_txt3">위치정보 이용약관</string>
     <string name="search_hint">검색어를 입력해주세요</string>
     <string name="search_location_go">내 주변 바로보기</string>
     <string name="search_recent_title">최근 검색어</string>
@@ -276,7 +276,7 @@
     <string name="validator_age_agreement">만 14세 이상인지 확인해 주세요.</string>
     <string name="validator_service_agreement">서비스 이용약관에 동의해 주세요.</string>
     <string name="validator_userinfo_agreement">개인정보취급방침에 동의해 주세요.</string>
-    <string name="validator_location_agreement">위치기반서비스 이용약관에 동의해 주세요.</string>
+    <string name="validator_location_agreement">위치정보 이용약관에 동의해 주세요.</string>
     <string name="validator_user_not_match">이메일 또는 비밀번호가 일치하지 않습니다.</string>
     <string name="validator_user_birth">생년월일을 선택하세요.</string>
     <string name="validator_user_gender">성별을 선택하세요.</string>
