--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,10 +87,10 @@
     <string name="search_hint">지역, 상품명을 입력해주세요.</string>
     <string name="search_location_go">내 주변 바로보기</string>
     <string name="search_recent_title">최근 검색어</string>
-    <string name="search_popular_title">인기 여행지</string>
+    <string name="search_popular_title">요즘 뜨는 검색 키워드</string>
     <string name="search_hotel_activity">추천 숙소 &amp; 액티비티</string>
-    <string name="search_hotel">숙소</string>
-    <string name="search_activity">액티비티</string>
+    <string name="search_hotel">추천 숙소</string>
+    <string name="search_activity">추천 액티비티</string>
     <string name="all_clear">전체 삭제</string>
     <string name="area_title">지역선택</string>
     <string name="alert_confrim">확인</string>
