--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="term_txt1">서비스 이용약관</string>
     <string name="term_txt2">개인정보처리방침</string>
     <string name="term_txt3">위치정보 이용약관</string>
+    <string name="term_txt4">사업자 정보확인</string>
     <string name="search_hint">지역, 상품명을 입력해주세요.</string>
     <string name="search_location_go">내 주변 바로보기</string>
     <string name="search_recent_title">최근 검색어</string>
