--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="companyinfo_txt1">\n(주)야놀자   |   대표자 이수진\n\n서울특별시 강남구 테헤란로 108길 42(대치동, 엠디엠타워)\n사업자 번호 : 220-87-42885, 통신 판매업 신고 : 강남-14211호\n관광사업자 등록번호 : 제2016-31호\n대표전화 : 1670-6864, 이메일 : hotelnow@yanolja.com</string>
     <string name="term_title">이용약관</string>
     <string name="term_txt1">서비스 이용약관</string>
-    <string name="term_txt2">개인정보처리방침</string>
+    <string name="term_txt2">개인정보 수집 이용</string>
     <string name="term_txt3">위치정보 이용약관</string>
     <string name="term_txt4">사업자 정보확인</string>
     <string name="search_hint">지역, 상품명을 입력해주세요.</string>
