--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,6 +151,7 @@
     <string name="reservation_money">구매 보상</string>
     <string name="reservation_sale_price_info">* 세금 및 봉사료가 모두 포함된 금액입니다</string>
     <string name="name">이름</string>
+    <string name="name_hint">체크인 시 필요항목입니다</string>
     <string name="contects">연락처</string>
     <string name="email">이메일</string>
     <string name="paytype0">간편결제</string>
@@ -219,6 +220,7 @@
     <string name="login_title">로그인</string>
     <string name="login_email">이메일 주소</string>
     <string name="login_pw">비밀번호</string>
+    <string name="login_pw2">대소문자/숫자/특수문자 포함, 8자~20자</string>
     <string name="login_sns">SNS계정으로 로그인</string>
     <string name="login_kakao">카카오</string>
     <string name="login_facebook">페이스북</string>
