--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,6 +188,7 @@
     <string name="service_txt2">알림메시지 받기</string>
     <string name="service_txt3">공지 / 예약내역 / 이벤트 / 특가 소식 등 알림 메시지를 통해 전달해드립니다</string>
     <string name="appinfo_txt1">앱 버전 정보</string>
+    <string name="retire_txt1">회원탈퇴</string>
     <string name="notice">공지사항</string>
     <string name="no_email_program">email을 전송 할 수 있는 프로그램이 없습니다.</string>
     <string name="wanna_call_hotelnow">궁금하신 사항을 호텔나우에 문의하세요.</string>
@@ -315,5 +316,12 @@
     <string name="setting_message">- 단독 특가, 깜짝 이벤트, 할인쿠폰 등 호텔나우의 실속있는 혜택을 누구보다 빠르게 받아볼 수 있습니다.</string>
     <string name="setting_message2">- 알림 설정에 미동의 하셔도 예약 완료 / 취소 등의 필수 정보 안내는 받아볼 수 있습니다</string>
     <string name="back_button">\'뒤로\' 버튼을 한번 더 누르시면 앱이 종료됩니다.</string>
+    <string name="retire_check_message">상기 내용을 확인하였으며 동의합니다.</string>
+    <string name="retire_message">1. 탈퇴 된 계정 정보는 재사용 및 복구가 불가능합니다.</string>
+    <string name="retire_message_1">탈퇴 시 개인정보는 즉시 삭제되어 복구가 불가능합니다. 아이디(이메일 주소) 7일 이후 삭제 처리 되며, 동일한 아이디(이메일 주소)로 가입하셔도 기존의 예약 정보/보유 혜택 등은 복구되지 않으니 신중하게 결정해주시기 바랍니다.</string>
+    <string name="retire_message_2">2. 회원 탈퇴 시, 회원님의 진행중인 숙소 예약 및 모든 혜택이 소멸되며 어떠한 경우에도 복구가 불가합니다.</string>
+    <string name="retire_message_3">3. 게시판형 서비스에 등록된 게시물은 삭제되지 않고 유지됩니다.</string>
+    <string name="retire_message_4">이용후기와 같은 게시판형 서비스에 등록한 게시물은 삭제되지 않고 유지됩니다. 탈퇴 후에는 회원정보가 삭제되어 본인 여부를 확인할 수 있는 방법이 없으므로, 게시글을 임의로 삭제할 수 없습니다. 삭제를 원하는 게시물이 있을 경우, 반드시 삭제 후 탈퇴 하시기 바라며, 필요한 데이터는 미리 백업을 해주시기 바랍니다.</string>
+    <string name="retire_message_5">4. 탈퇴사유</string>
 
 </resources>
