--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="error_ticket_location">티캣 위치를 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
     <string name="error_near_hotel_location">일시적으로 주변 호텔을 확인 할 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
     <string name="error_capcha_img">캡챠 이미지를 읽어올 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
-    <string name="error_reserve_money">적립금 정보를 읽어올 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
+    <string name="error_reserve_money">포인트 정보를 읽어올 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
     <string name="error_coupon_money">쿠폰 정보를 읽어올 수 없습니다. 잠시 후 다시 시도해 주세요.</string>
     <string name="error_review_regist">리뷰 등록에 실패했습니다. 잠시 후 다시 시도해 주세요.</string>
     <string name="booking_hide_success">예약내역을 삭제하였습니다.</string>
@@ -56,7 +56,7 @@
     <string name="alert_close">닫기</string>
     <string name="alert_notice">알림</string>
     <string name="alert_account_msg">인터넷뱅킹을 이용해 입금자명[%1$s]으로 입력해 주시면, (%2$s)님 이름으로 실시간 예약이 완료됩니다.\n\n입금기한: %3$s 까지</string>
-    <string name="review_save_title">리뷰 작성은 숙박 후 10일간만 가능하며,\n정상 등록시 적립금 500원이 바로 지급됩니다.</string>
+    <string name="review_save_title">리뷰 작성은 숙박 후 10일간만 가능하며,\n정상 등록시 포인트 500p가 바로 지급됩니다.</string>
     <string name="review_save_title2">리뷰 작성은 구매 티켓 사용 일 이후 10일간만 가능합니다.</string>
 
     <string name="alert_yes">예</string>
@@ -141,7 +141,7 @@
     <string name="reservation_pay_title">결제방식</string>
     <string name="reservation_payinfo_title">결제 정보</string>
     <string name="reservation_private">프라이빗딜 추가 할인</string>
-    <string name="reservation_point">적립금</string>
+    <string name="reservation_point">포인트</string>
     <string name="reservation_coupon">사용가능쿠폰</string>
     <string name="reservation_point_total"><u>전액사용</u></string>
     <string name="reservation_point_total_cancel"><u>전액취소</u></string>
@@ -168,12 +168,12 @@
     <string name="caution_agreement_view"><u>내용보기</u></string>
     <string name="map_detail"><u>상세보기</u></string>
     <string name="map_detail2"><u>상세보기</u></string>
-    <string name="signup_recommend_success">회원가입 및 적립금 지급이 완료되었습니다.</string>
+    <string name="signup_recommend_success">회원가입 및 포인트 지급이 완료되었습니다.</string>
     <string name="reservation_ok">결제하기</string>
     <string name="mypage_title">내정보</string>
     <string name="mypage_not_join">아직 회원이 아니신가요?</string>
     <string name="mypage_not_join2">지금 회원가입하고, 호텔나우만의 특별한 혜택을 만나보세요!</string>
-    <string name="mypage_not_sub_join">모든 숙소 예약 시 구매 적립금 제공</string>
+    <string name="mypage_not_sub_join">모든 숙소 예약 시 구매 포인트 제공</string>
     <string name="mypage_not_sub_join2">최대 60% 추가 할인  프라이빗딜</string>
     <string name="mypage_not_sub_join3">관심 상품 특가 알림 서비스</string>
     <string name="mypage_join">회원가입</string>
@@ -200,7 +200,7 @@
     <string name="coupon">쿠폰</string>
     <string name="card">결제카드</string>
     <string name="card_manager">결제카드 관리</string>
-    <string name="save_title">적립금 내역</string>
+    <string name="save_title">포인트 내역</string>
     <string name="save_subtitle">적립 / 사용</string>
     <string name="coupon_title">쿠폰함</string>
     <string name="info_title">확인사항</string>
@@ -211,9 +211,9 @@
     <string name="card_subtitle">결제카드 등록</string>
     <string name="card_submassege">자주 사용하시는 카드를 최초 1회 등록 하시면, 서명 한번으로 편하게 결제 하실 수 있는 결제 수단입니다.</string>
     <string name="card_subtitle2">내 결제카드 리스트</string>
-    <string name="save_money_my_title">나의 적립금</string>
+    <string name="save_money_my_title">나의 포인트</string>
     <string name="save_money_disable_money">14일 이내 소멸 예정</string>
-    <string name="save_money_list_info">- 최소 1,000원부터 적립금 사용 가능, 사용 금액에 제한이 없습니다.\n- 구매보상, 리뷰보상 적립금의 유효기간은 지급일로부터 1년이며, 그 외에는 지급 유형에 따라 유효기간이 다를 수 있습니다.\n- 유효기간이 만료 된 적립금은 자동 소멸됩니다.</string>
+    <string name="save_money_list_info">- 최소 1,000p부터 포인트 사용 가능, 사용 금액에 제한이 없습니다.\n- 구매보상, 리뷰보상 포인트의 유효기간은 지급일로부터 1년이며, 그 외에는 지급 유형에 따라 유효기간이 다를 수 있습니다.\n- 유효기간이 만료 된 포인트는 자동 소멸됩니다.</string>
     <string name="coupon_list_info">- 쿠폰별 유효기간이 상이하며, 기간 만료시 사용이 불가합니다.\n- 쿠폰에 따라 최소 결제 금액, 할인 적용 상품 등 쿠폰 사용 기준이 다르므로 확인 후 이용해주시기 바랍니다.</string>
     <string name="card_list_info">자주 사용하시는 카드를 최초 1회 등록 하시면, 서명 한번으로 편하게 결제하실 수 있는 결제 수단입니다.</string>
     <string name="coupon_hint">쿠폰명을 입력하세요.</string>
@@ -284,7 +284,7 @@
     <string name="validator_user_not_match">이메일 또는 비밀번호가 일치하지 않습니다.</string>
     <string name="validator_user_birth">생년월일을 선택하세요.</string>
     <string name="validator_user_gender">성별을 선택하세요.</string>
-    <string name="validator_recommend_fail">적립금 지급에 실패하였습니다. 고객센터로 문의바랍니다.</string>
+    <string name="validator_recommend_fail">포인트 지급에 실패하였습니다. 고객센터로 문의바랍니다.</string>
     <string name="info_reservation">최근 12개월간의 예약/취소 내역입니다</string>
     <string name="info_review">리뷰 작성하고 500원 받기</string>
     <string name="info_review2">(체크아웃 이후 단, 10일간만 작성 가능)</string>
@@ -310,7 +310,7 @@
     <string name="recom_desc">※ 초대한 친구는 초대받은 친구가 첫 구매 후,\n숙박 리뷰 작성 시 %1$s원을 적립해드립니다.</string>
     <string name="recom_desc2">※ 초대한 친구는 초대받은 친구가 첫 구매 후,\n숙박 리뷰 작성 시 %1$s원을 적립해드립니다.</string>
     <string name="congraturations">짝짝짝! %1$s원이 적립되었습니다.</string>
-    <string name="get_reserve_money">예약시 적립금으로 할인받아보세요!</string>
+    <string name="get_reserve_money">예약시 포인트로 할인받아보세요!</string>
     <string name="not_user_reservation">본 예약은 비회원 예약으로 이후 예약 확인을 위해 예약번호, 예약자명, 전화번호를 꼭 숙지 해주시기 바랍니다</string>
 
     <string name="setting_message">- 단독 특가, 깜짝 이벤트, 할인쿠폰 등 호텔나우의 실속있는 혜택을 누구보다 빠르게 받아볼 수 있습니다.</string>
