--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -325,4 +325,7 @@
     <string name="retire_message_4">이용후기와 같은 게시판형 서비스에 등록한 게시물은 삭제되지 않고 유지됩니다. 탈퇴 후에는 회원정보가 삭제되어 본인 여부를 확인할 수 있는 방법이 없으므로, 게시글을 임의로 삭제할 수 없습니다. 삭제를 원하는 게시물이 있을 경우, 반드시 삭제 후 탈퇴 하시기 바라며, 필요한 데이터는 미리 백업을 해주시기 바랍니다.</string>
     <string name="retire_message_5">4. 탈퇴사유</string>
 
+    <string name="setting_agree1">개인 정보 수집 및 이용 <font fgcolor="#999999">(선택)</font></string>
+    <string name="setting_agree2">위치 서비스 이용 <font fgcolor="#999999">(선택)</font></string>
+
 </resources>
